# libfdws

./: CMakeLists.txt  README.md  main.c
libfdws/: CMakeLists.txt  FDHttp.c  FDHttp.h  FDSocket.c  FDSocket.h  FDWebSocket.c  FDWebSocket.h
pytest/: test.py
